WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275234
REGRESSION (Safari 17) Sometimes intersection observer notifications fail to fire
https://bugs.webkit.org/show_bug.cgi?id=275234
Summary
REGRESSION (Safari 17) Sometimes intersection observer notifications fail to...
Simon Fraser (smfr)
Reported
2024-06-06 17:15:18 PDT
When registering a new Intersection Observer, sometimes, if nothing else triggers a rendering update, we can fail to fire the first observation.
Attachments
Testcase
(1.48 KB, text/html)
2024-06-06 17:15 PDT
,
Simon Fraser (smfr)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-06-06 17:15:49 PDT
Created
attachment 471612
[details]
Testcase
Simon Fraser (smfr)
Comment 2
2024-06-06 17:16:09 PDT
<
rdar://126238865
>
Simon Fraser (smfr)
Comment 3
2024-06-06 17:21:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29602
EWS
Comment 4
2024-06-08 11:00:17 PDT
Committed
279853@main
(502bfe649c55): <
https://commits.webkit.org/279853@main
> Reviewed commits have been landed. Closing PR #29602 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug